[package]
name = "charizhard-ota"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
axum = "0.7.9"
dotenv = "0.15.0"
env_logger = "0.11.6"
jsonwebtoken = "8.1.1"
regex = "1.11.1"
serde = "1.0.216"
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
